# nivaqi-v1

./: .env  Cargo.toml  diesel.toml
documents/: accounts & inventory.md
migrations/2025-03-25-082401_users/: down.sql  up.sql
migrations/2025-03-27-164810_location/: up.sql
migrations/2025-03-27-165533_coa/: down.sql  up.sql
migrations/2025-03-27-194810_location/: down.sql  up.sql
migrations/2025-03-27-194820_partners/: down.sql  up.sql
migrations/2025-03-27-194830_journals/: down.sql  up.sql
migrations/2025-03-27-194936_partners/: up.sql
migrations/2025-03-27-203600_location/: down.sql  up.sql
migrations/2025-03-28-161949_banks/: down.sql  up.sql
migrations/2025-03-28-175047_tax/: down.sql  up.sql
migrations/2025-03-28-195752_warehouse/: down.sql  up.sql
migrations/2025-03-28-202335_product/: down.sql  up.sql
migrations/2025-03-29-084339_inventory/: down.sql  up.sql
migrations/2025-03-29-101433_sales/: down.sql  up.sql
migrations/2025-03-29-172349_purchase/: down.sql  up.sql
migrations/2025-03-30-110930_invoice/: down.sql  up.sql
migrations/2025-03-31-104851_creditnote/: down.sql  up.sql
src/: handlers.rs  main.rs  schema.rs
src/database/: mod.rs
src/model/: mod.rs  roles.rs  users.rs
src/modules/: mod.rs
src/modules/base/handlers/: user_handlers.rs
src/modules/base/services/: user_services.rs
src/modules/inventory/: mod.rs
src/modules/users/: mod.rs  routes.rs
src/modules/users/handlers/: mod.rs  user_handlers.rs
src/modules/users/model/: roles.rs  users.rs
src/modules/users/services/: mod.rs  user_services.rs
