[package]
name = "nivaqi"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0.0-beta.8"
actix-rt = "2.5.0"
actix-web-httpauth = "0.8.2"
# chrono = { version = "0.4.39", features = ["serde"] }
# tokio-postgres = "0.7.2"
# chrono = "0.4.19"